<resources>
    <string name="app_name">Crispy Page</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member ? Get registered with us now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_order">Orders</string>
    <string name="nav_pending">Pending Order</string>
    <string name="nav_support">Support</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_FAQ">FAQ</string>
    <string name="nav_Feedback">Feedback</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Orders</item>
        <item>Pending Order</item>
        <item>Support</item>
        <item>Settings</item>
        <item>FAQ</item>
        <item>Feedback</item>
        <item>About Us</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Upload</string>
    <string name="slide_1_desc">Upload your files on a single click!!</string>

    <string name="slide_2_title">Fast Delivery</string>
    <string name="slide_2_desc">Get the documents delivered within an hour!</string>

    <string-array name="binding_array">
        <item>Binding</item>
        <item>Soft Binding</item>
        <item>File</item>
        <item>Folder</item>
        <item>Lamination</item>
    </string-array>

    <string-array name="orientation_array">
        <item>ORIENTATION</item>
        <item>One Sided</item>
        <item>Both Sided</item>
    </string-array>

    <string-array name="choice_array">
        <item>CHOICE</item>
        <item>Black &amp; white</item>
        <item>Soft Binding</item>

    </string-array>

    <string-array name="area_array">
        <item>Area Nearest To</item>
        <item>Nungambakkam</item>
        <item>Potheri</item>
        <item>Kattankulathur</item>
    </string-array>



</resources>
