<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_order" />
        <item
            android:id="@+id/nav_pending_order"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_pending" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_support" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_FAQ"
                android:title="@string/nav_FAQ" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/nav_Feedback" />
        </menu>
    </item>

</menu>